--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "buildProd": "ng build --base-href=/as-week8-routes/",
     "test": "ng test"
   },
   "private": true,
